Edited The Unclean and the banner image for the article.

--- a/_posts/2021-06-23-unclean.markdown
+++ b/_posts/2021-06-23-unclean.markdown
@@ -4,7 +4,7 @@ title: "The Unclean"
 date: 2014-08-29 14:34:25
 categories: theology
 tags: featured theology thoughts
-image: /assets/article_images/2021-06-23-unclean/vision.jpeg
+image: /assets/article_images/2021-06-23-unclean/vision.jpg
 ---
 
 > (Acts 10:9-16)
