Fixed a typo in The Unclean.

--- a/_posts/2021-06-23-unclean.markdown
+++ b/_posts/2021-06-23-unclean.markdown
@@ -29,7 +29,7 @@ Let's take a step back from this for a moment and reflect upon the context of ot
 
 Here we have Peter, having just had a vision, and a group of men sent by Cornelius, a Roman Centurion, meeting at Simon's door. Consider that Israel is currently under Roman occupation and Roman Centurions are people whom Jews should fear. These are trained warriors for the most powerful empire in the world. However, here we find them humbly seeking out Peter and requesting him to come to see Cornelius.
 
-Peter travels to meet with Cornelius and upon arriving here's Cornelius' account of God speaking to him to seek Peter. It is at this moment that Peter understands what God was instructing when he gave him the trance of unclean animals.
+Peter travels to meet with Cornelius and upon arriving hears Cornelius' account of God speaking to him to seek Peter. It is at this moment that Peter understands what God was instructing when he gave him the trance of unclean animals.
 
 Under the Law of God, only certain animals were kosher and to eat of any animal that was not kosher means that you have been defiled and are no longer clean in the sight of God. Jews were also set apart from other men because of the practice of circumcision that all descendants of Abraham had been instructed to do as an outward symbol of their belonging to Yahweh.
 
