Added a mobile image to The Unclean.

--- a/_posts/2021-06-23-unclean.markdown
+++ b/_posts/2021-06-23-unclean.markdown
@@ -5,6 +5,7 @@ date: 2021-06-23 09:30:00
 categories: theology
 tags: featured theology thoughts
 image: /assets/article_images/2021-06-23-unclean/vision.jpg
+image2: /assets/article_images/2021-06-23-unclean/vision-mobile.jpg
 ---
 
 > (Acts 10:9-16)
